# mars-rover

./: .gitignore  .gitmodules  README.md  SHOPPING_LIST.md  stl
ros2_ws/src/sawppy_ai/: package.xml  setup.cfg  setup.py
ros2_ws/src/sawppy_ai/config/: ai_link_config.yaml
ros2_ws/src/sawppy_ai/launch/: ai_link.launch.py
ros2_ws/src/sawppy_ai/sawppy_ai/: __init__.py  ai_link_node.py  client.py  config.py
ros2_ws/src/sawppy_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/sawppy_bringup/launch/: sawppy.launch.py  teleop.launch.py
ros2_ws/src/sawppy_bringup/sawppy_bringup/: __init__.py
ros2_ws/src/sawppy_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/sawppy_control/config/: control_params.yaml
ros2_ws/src/sawppy_control/launch/: control.launch.py
ros2_ws/src/sawppy_control/sawppy_control/: __init__.py  ackermann_controller.py  odometry_node.py
ros2_ws/src/sawppy_description/: CMakeLists.txt  package.xml
ros2_ws/src/sawppy_description/config/: display.rviz
ros2_ws/src/sawppy_description/launch/: display.launch.py
ros2_ws/src/sawppy_description/urdf/: sawppy.urdf.xacro
ros2_ws/src/sawppy_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/sawppy_hardware/config/: servo_config.yaml
ros2_ws/src/sawppy_localization/: package.xml  setup.cfg  setup.py
ros2_ws/src/sawppy_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/sawppy_sensors/: package.xml  setup.cfg  setup.py
ros2_ws/src/sawppy_sensors/sawppy_sensors/: __init__.py  imu_publisher.py  thermal_monitor.py  tof_publisher.py
(+10 files in other folders)
